<resources>
    <string name="app_name">alc4-challenge1-android</string>
    <string name="about">About ALC</string>
    <string name="profile">My Profile</string>
    <string name="fullName">Mehdi Lamrini</string>
    <string name="Country">Country:</string>
    <string name="Morocco">Morocco</string>
    <string name="Track">Track:</string>
    <string name="Android">Android</string>
    <string name="Email">Email:</string>
    <string name="Gmail">mehdi.lamr@gmail.com</string>
    <string name="phone">Phone:</string>
    <string name="num">+212 6 45 91 28 37 </string>
    <string name="Slack">Slack:</string>
    <string name="username">\@Mehdi Lam</string>

</resources>
