<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityC">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    <ImageView android:layout_width="180dp"
               android:layout_height="180dp"
               android:src="@drawable/img_profil"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp"
               android:layout_marginRight="8dp"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginLeft="8dp"
               android:layout_marginStart="8dp"
               android:id="@+id/imageView"
               android:contentDescription="@string/fullName"
               android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="30sp"
              android:text="@string/fullName"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintHorizontal_bias="0.498"
              app:layout_constraintTop_toBottomOf="@+id/imageView"
              android:id="@+id/textView" android:layout_marginTop="8dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="28dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:id="@+id/view"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp"
                  android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  android:layout_marginRight="8dp"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:gravity="start"
                  app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="8dp"
                  android:id="@+id/linearLayout">


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/Track"
                  android:padding="10dp"
                  android:textStyle="bold"
                  android:textSize="20sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/Android"
                  android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
                                     app:layout_constraintStart_toStartOf="parent"
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginStart="8dp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginRight="8dp"
                                     app:layout_constraintHorizontal_bias="0.0"
                                     android:gravity="start"
                                    android:id="@+id/linearLayout2"
                                     android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/Country"
              android:padding="10dp"
              android:textStyle="bold"
              android:textSize="20sp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/Morocco"
              android:textSize="20sp"/>

</LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:orientation="horizontal"
                                   android:id="@+id/linearLayout3"
                                   app:layout_constraintStart_toStartOf="parent"
                                   android:layout_marginLeft="8dp"
                                   android:layout_marginStart="8dp"
                                   app:layout_constraintEnd_toEndOf="parent"
                                   android:layout_marginEnd="8dp"
                                   android:layout_marginRight="8dp"
                                   app:layout_constraintHorizontal_bias="0.0"
                                   android:gravity="start"
                                   android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Email"
              android:padding="10dp"
              android:textStyle="bold"
              android:textSize="20sp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Gmail"
              android:textSize="20sp"/>

</LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/linearLayout4"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp"
                  android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  android:layout_marginRight="8dp"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:gravity="start"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/phone"
                  android:padding="10dp"
                  android:textStyle="bold"
                  android:textSize="20sp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/num"
                  android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/linearLayout5"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp"
                  android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  android:layout_marginRight="8dp"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:gravity="start"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/Slack"
                  android:padding="10dp"
                  android:textStyle="bold"
                  android:textSize="20sp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/username"
                  android:textSize="20sp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>